# rich

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  USER_GUIDE.md  pyproject.toml
.agents/skills/ashare-backtest-check/: SKILL.md
.agents/skills/ashare-daily-review/: SKILL.md
.agents/skills/ashare-data-sync/: SKILL.md
.agents/skills/ashare-refresh-before-analysis/: SKILL.md
.agents/skills/ashare-sector-review/: SKILL.md
.agents/skills/references/: high-low-switch-framework.md  limitup-linkage-framework.md  yangjia-emotion-framework.md
configs/: strategy.yaml
scripts/: rich-service.sh
tests/: test_akshare_events.py  test_api_strategy_endpoints.py  test_backfill_recent_data.py  test_features.py  test_instock_em_provider.py  test_sina_provider.py  test_sqlite_store.py  test_strategy.py  test_sync_market_data.py
